# CyberBullying---Project

./: .gitignore  README.md  pyproject.toml  requirements.txt
api/: main.py
artifacts/: label_map_binary.json  label_map_multiclass.json  splits_binary.pkl  splits_multiclass.pkl  vocab_binary.json  vocab_multiclass.json
notebooks/: 01_eda.ipynb  02_model_comparison.ipynb
outputs/: training_history_binary.json  training_history_multiclass.json
outputs/binary/: metrics.json
outputs/logistic/binary/: metrics.json
outputs/logistic/multiclass/: metrics.json
outputs/multiclass/: metrics.json
outputs/rf/binary/: metrics.json
outputs/rf/multiclass/: metrics.json
scripts/: download_glove.py  evaluate.py  predict.py  preprocess.py  train.py  train_baseline.py
src/cyberbullying/: __init__.py  config.py  dataset.py  inference.py  metrics.py  model.py  preprocessing.py  train_utils.py
tests/: __init__.py  test.py  test_preprocessing.py
