[project]
name = "cyberbullying-project"
version = "0.1.0"
description = "PyTorch cyberbullying tweet classifier with CLI and REST API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "scikit-learn>=1.3",
    "tqdm>=4.65",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "pytest>=8.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["jupyter>=1.0"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
